--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,12 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="text-center">
+  <h1>Airbnb</h1>
+  <p>Your sports equipment rental platform.</p>
+</div>
+
+<div class="d-flex justify-content-center flex-grow-1">
+      <!-- Search Form -->
+      <form class="d-flex justify-content-center">
+        <input class="form-control me-2" type="search" placeholder="Search equipment" aria-label="Search" style="max-width: 200px;">
+        <button class="btn btn-outline-success" type="submit"><i class="fa-regular fa-magnifying-glass"></i></button>
+      </form>
+    </div>
