--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,15 +6,27 @@
     <!-- Profile Dropdown -->
     <ul class="navbar-nav">
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-          <span class="avatar">My Account</span>
-        </a>
-        <ul class="dropdown-menu dropdown-menu-end">
-          <li><a class="dropdown-item" href="#">New offer</a></li>
-          <li><a class="dropdown-item" href="#">My offers</a></li>
-          <li><hr class="dropdown-divider"></li>
-          <li><a class="dropdown-item" href="#">Log in / Log out</a></li>
-        </ul>
+        <% if user_signed_in? %>
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <span class="avatar">My Account</span>
+          </a>
+          <ul class="dropdown-menu dropdown-menu-end">
+            <li><a class="dropdown-item" href="#">New offer</a></li>
+            <li><a class="dropdown-item" href="#">My offers</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %></li>
+          </ul>
+        <% else %>
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <span class="avatar">Log In / Sign Up</span>
+          </a>
+          <ul class="dropdown-menu dropdown-menu-end">
+            <li class="nav-item dropdown">
+              <li><%= link_to "Sign Up", new_user_registration_path, class: "dropdown-item" %></li>
+              <li><%= link_to "Log In", new_user_session_path, class: "dropdown-item" %></li>
+            </li>
+          </ul>
+        <% end %>
       </li>
     </ul>
   </div>
