--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <body>
     <%= render "shared/navbar" %>
-    <div class="container my-4">
+    <div class="container-xxl my-4">
       <%= yield %>
     </div>
     <p class="notice"><%= notice %></p>
