Optimised navbar contents  max-width

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="text-center">
   <h1>Airbnb</h1>
-  <p>Your sports equipment rental platform. Your sports equipment rental platform. Your sports equipment rental platform. Your sports equipment rental platform. Your sports equipment rental platform. Your sports equipment rental platform. Your sports equipment rental platform. Your sports equipment rental platform. Your sports equipment rental platform. Your sports equipment rental platform. </p>
+  <p>Your sports equipment rental platform.</p>
 </div>
 
 <div class="d-flex justify-content-center flex-grow-1">
