equipment model. only thing not working is the new function...

--- a/app/views/equipments/index.html.erb
+++ b/app/views/equipments/index.html.erb
@@ -2,7 +2,7 @@
 
 <ol>
   <% @equipments.each do |equipment| %>
-    <li><%= link_to equipment.sport, equipment_path(equipment) %></li>
+    <li><%= link_to equipment.equipmentname, equipment_path(equipment) %></li>
   <% end %>
 </ol>
 
