--- a/app/views/equipments/_form.html.erb
+++ b/app/views/equipments/_form.html.erb
@@ -1,9 +1,7 @@
-<%= form_with model: @equipment do |f| %>
-  <%= f.label :sport %>
-  <%= f.text_field :title %>
-  <%= f.label :equipmentname %>
-  <%= f.text_field :details %>
-  <%= f.label :description %>
-  <%= f.text_field :details %>
+<%= simple_form_for (@equipment) do |f| %>
+  <%= f.input :sport %>
+  <%= f.input :equipmentname %>
+  <%= f.input :description %>
+  <%= f.input :price %>
   <%= f.submit %>
 <% end %>
