Replaced the p tags with flashes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,9 @@
 
   <body>
     <%= render "shared/navbar" %>
+    <%= render "shared/flashes" %>
     <div class="container-xxl my-4 px-0">
       <%= yield %>
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
     </div>
   </body>
 </html>
