--- a/app/views/equipment/_form.html.erb
+++ b/app/views/equipment/_form.html.erb
@@ -1,7 +1,7 @@
 <%= simple_form_for (@equipment) do |f| %>
   <%= f.input :sport %>
-  <%= f.input :equipmentname %>
-  <%= f.input :description %>
-  <%= f.input :price %>
+  <%= f.input :equipmentname, label: 'Name of equipment' %>
+  <%= f.input :description, as: :text %>
+  <%= f.input :price, hint: 'No special characters' %>
   <%= f.submit %>
 <% end %>
