--- a/app/views/equipment/new.html.erb
+++ b/app/views/equipment/new.html.erb
@@ -1,12 +1,4 @@
-<div>
-
-  <h1>Add a new equipment!</h1>
-
+<div class="container-fluid form">
+  <h2>Add a new equipment</h2>
   <%= render "form", equipment: @equipment %><br>
-
-
-  <%= link_to "Show all equipments",
-  equipment_index_path %><br>
-
-
 </div>
