--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,7 +19,7 @@
     </div>
 
     <div class="form-actions my-4">
-      <%= f.button :submit, "Sign up", class: "btn btn-primary" %>
+      <%= f.button :submit, "Sign up", class: "btn btn-success" %>
     </div>
   <% end %>
 
