--- a/app/views/equipment/_form.html.erb
+++ b/app/views/equipment/_form.html.erb
@@ -1,7 +1,10 @@
 <%= simple_form_for (@equipment) do |f| %>
-  <%= f.input :sport %>
-  <%= f.input :equipmentname, label: 'Name of equipment' %>
-  <%= f.input :description, as: :text %>
-  <%= f.input :price, hint: 'No special characters' %>
-  <%= f.submit %>
+  <div class="form-inputs my-4">
+    <%= f.input :sport %>
+    <%= f.input :equipmentname, label: 'Name of equipment' %>
+    <%= f.input :description, as: :text %>
+    <%= f.input :price, hint: 'No special characters' %>
+    <%= f.submit class: "btn btn-success" %>
+    <%= link_to "Back", root_path, class: "btn btn-outline-secondary" %>
+  </div>
 <% end %>
