--- a/app/views/equipment/edit.html.erb
+++ b/app/views/equipment/edit.html.erb
@@ -1,4 +1,4 @@
-<div>
-  <h1>Edit an existing equipment!</h1>
+<div class="container-fluid form">
+  <h2>Edit an existing equipment!</h2>
   <%= render "form", equipment: @equipment %>
 </div>
