Minor code improvements

--- a/app/views/equipment/index.html.erb
+++ b/app/views/equipment/index.html.erb
@@ -1,15 +1,18 @@
 <div class="container my-5">
   <div class="text-center">
+    <!-- Title and description -->
     <h1>Airbnb</h1>
     <p>Your sports equipment rental platform.</p>
   </div>
 
   <div class="d-flex justify-content-center flex-grow-1">
-        <!-- Search Form -->
-        <form class="d-flex justify-content-center">
-          <input class="form-control me-2" type="search" placeholder="Search equipment" aria-label="Search" style="max-width: 200px;">
-          <button class="btn btn-outline-success" type="submit"><i class="fa-regular fa-magnifying-glass"></i></i></button>
-        </form>
+    <!-- Search Form -->
+    <form class="d-flex justify-content-center">
+      <input class="form-control me-2" type="search" placeholder="Search equipment" aria-label="Search" style="max-width: 200px;">
+      <button class="btn btn-outline-success" type="submit">
+        <i class="fa-regular fa-magnifying-glass"></i>
+      </button>
+    </form>
   </div>
 </div>
 
@@ -17,22 +20,10 @@
   <div class="container">
     <div class="row">
       <% @equipments.each do |equipment| %>
-      <div class="col-lg-3 mb-3">
-        <div class="card">
-          <%= link_to(equipment_path(equipment)) do %>
-            <%= image_tag("https://images.unsplash.com/photo-1571068316344-75bc76f77890?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1740&q=80", alt: "", class: "card-img-top img-fluid", style: "height: 304px; object-fit: cover;") %>
-          <% end %>
-          <div class="card-body">
-            <h6 class="card-title"><%= equipment.sport %></h6>
-            <h4 class="card-title"><strong><%= equipment.equipmentname %></strong></h4>
-            <p class="card-text"><%= equipment.description %></p>
-            <div class="d-flex justify-content-between align-items-baseline">
-              <%= link_to "Read More", equipment_path(equipment), class: "btn btn-outline-success" %>
-              <span>$<%= equipment.price %></span>
-            </div>
-          </div>
+        <div class="col-lg-3 mb-3">
+          <!-- Render Card component -->
+          <%= render partial: "shared/card", locals: { equipment: equipment } %>
         </div>
-      </div>
       <% end %>
     </div>
   </div>
