--- a/app/views/equipment/index.html.erb
+++ b/app/views/equipment/index.html.erb
@@ -1,30 +1,14 @@
 <div class="container my-5">
+  
+  <!-- Title and description -->
   <div class="text-center">
-    <!-- Title and description -->
     <h1>Airbnb</h1>
     <p>Your sports equipment rental platform.</p>
   </div>
-
-  <div class="d-flex justify-content-center flex-grow-1">
-    <!-- Search Form -->
-    <form class="d-flex justify-content-center">
-      <input class="form-control me-2" type="search" placeholder="Search equipment" aria-label="Search" style="max-width: 200px;">
-      <button class="btn btn-outline-success" type="submit">
-        <i class="fa-regular fa-magnifying-glass"></i>
-      </button>
-    </form>
-  </div>
+  
+  <!-- Search Bar -->
+  <%= render partial: "shared/searchbar" %>
 </div>
 
-<section id="gallery" class="my-5">
-  <div class="container">
-    <div class="row">
-      <% @equipments.each do |equipment| %>
-        <div class="col-lg-3 mb-3">
-          <!-- Render Card component -->
-          <%= render partial: "shared/card", locals: { equipment: equipment } %>
-        </div>
-      <% end %>
-    </div>
-  </div>
-</section>
+<!-- Gallery -->
+<%= render partial: "shared/gallery" %>
