--- a/app/views/equipment/show.html.erb
+++ b/app/views/equipment/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container my-5">
+<div class="container-fluid form my-5">
   <h2>Equipment: <%= @equipment.equipmentname %></h2>
   <p>Sport: <%= @equipment.sport %></p>
   <p>Description: <%= @equipment.description %></p>
