--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -25,7 +25,7 @@
     </div>
 
     <div class="form-actions my-4">
-      <%= f.button :submit, "Update", class: "btn btn-success" %>
+      <%= f.button :submit, "Update", class: "btn btn-primary" %>
     </div>
   <% end %>
 
