--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,7 +11,7 @@
             <span class="avatar">My Account</span>
           </a>
           <ul class="dropdown-menu dropdown-menu-end">
-            <li><%= link_to "New offer", new_equipment_path, class: "dropdown-item" %></li>
+            <li><a class="dropdown-item" href="#">New offer</a></li>
             <li><a class="dropdown-item" href="#">My offers</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %></li>
