--- a/app/views/shared/_gallery.html.erb
+++ b/app/views/shared/_gallery.html.erb
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row">
       <% @equipments.each do |equipment| %>
-        <div class="col-md-6 col-lg-3 mb-3">
+        <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
           
           <!-- Card -->
           <%= render partial: "shared/card", locals: { equipment: equipment } %>
