--- a/app/views/shared/_card.html.erb
+++ b/app/views/shared/_card.html.erb
@@ -1,7 +1,10 @@
 <div class="card mb-2">
   <!-- Image -->
   <%= link_to equipment_path(equipment), class: "card-link" do %>
-    <%= image_tag("https://images.unsplash.com/photo-1571068316344-75bc76f77890?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1740&q=80", alt: "", class: "card-img-top img-fluid", style: "height: 304px; object-fit: cover;") %>
+    <!--<%= image_tag("https://images.unsplash.com/photo-1571068316344-75bc76f77890?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1740&q=80", alt: "", class: "card-img-top img-fluid", style: "height: 304px; object-fit: cover;") %> -->
+    <% if equipment.photo.present? %>
+    <%= cl_image_tag equipment.photo.key, class: "card-img-top img-fluid", style: "height: 304px; object-fit: cover;" %>
+      <% end %>
   <% end %>
 
   <!-- Contents -->
@@ -15,7 +18,7 @@
     <!-- Link to equipment details -->
     <div class="d-flex justify-content-between align-items-baseline">
       <%= link_to "Read More", equipment_path(equipment), class: "btn btn-outline-success card-button mt-2 mb-1 ms-1" %>
-      
+
       <!-- Price -->
       <span class="fw-bold card-price pe-1">$<%= equipment.price %></span>
     </div>
