General front end improvements: fonts, spacings, etc.

--- a/app/views/equipment/edit.html.erb
+++ b/app/views/equipment/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid form">
+<div class="container-fluid form my-5">
   <h2>Edit an existing equipment!</h2>
   <%= render "form", equipment: @equipment %>
 </div>
