--- a/app/views/equipment/new.html.erb
+++ b/app/views/equipment/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid form">
+<div class="container-fluid form my-5">
   <h2>Add a new equipment</h2>
   <%= render "form", equipment: @equipment %><br>
 </div>
