Created bookings#new and bookings#create actions, need to add functionality in view

--- a/app/views/shared/_card.html.erb
+++ b/app/views/shared/_card.html.erb
@@ -17,7 +17,7 @@
       <%= link_to "Read More", equipment_path(equipment), class: "btn btn-outline-success card-button mt-2 mb-1 ms-1" %>
       
       <!-- Price -->
-      <span class="card-price pe-1">$<%= equipment.price %></span>
+      <span class="card-price pe-1">$<%= equipment.price %> / day</span>
     </div>
   </div>
 </div>
