--- a/app/views/equipment/index.html.erb
+++ b/app/views/equipment/index.html.erb
@@ -2,7 +2,7 @@
   
   <!-- Title and description -->
   <div class="text-center">
-    <h1>Airbnb</h1>
+    <h1>SportRent</h1>
     <p>Your sports equipment rental platform.</p>
   </div>
   
