Added -Book now- button to equipment show page. Doesn't show to users who own the equipment

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -6,6 +6,7 @@
     <%= f.input :start_date %>
     <%= f.input :end_date %>
     <%= f.submit "Book Now", class: "btn btn-primary" %>
+    <%= link_to "Back", equipment_index_path, class: "btn btn-outline-secondary" %>
   </div>
 <% end %>
 </div>
