--- a/app/views/equipment/show.html.erb
+++ b/app/views/equipment/show.html.erb
@@ -12,6 +12,9 @@
     <% if policy(@equipment).destroy? %>
       <%= link_to "Delete", equipment_path(@equipment), class: "btn btn-outline-danger", data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
     <% end %>
+    <% unless @equipment.user == current_user %>
+      <%= link_to "Book", new_equipment_booking_path(@equipment), class: "btn btn-success" %>
+    <% end %>
   <%= link_to "Back", equipment_index_path, class: "btn btn-outline-secondary" %>
   </div>
 </div>
