--- a/app/views/shared/_searchbar.html.erb
+++ b/app/views/shared/_searchbar.html.erb
@@ -1,13 +1,27 @@
 <div class="d-flex justify-content-center flex-grow-1">
-    <form class="d-flex justify-content-center">
+    <%# <form class="d-flex justify-content-center">
 
       <!-- Search field -->
       <input class="form-control me-2" type="search" placeholder="Search equipment" aria-label="Search" style="max-width: 200px;">
-      
+
       <!-- Submit button -->
       <button class="btn btn-outline-success" type="submit">
         <i class="fa-regular fa-magnifying-glass"></i>
       </button>
-    </form>
-  </div>
+    </form> %>
+
+    <div class="row justify-content-center">
+      <div class="d-flex justify-content-center">
+        <%= form_with url: equipment_index_path, method: :get, class: "d-flex form-control me-2" do %>
+          <%= text_field_tag :query,
+                params[:query],
+                class: "form-control me-3",
+                placeholder: "Search Equipment!"
+            %>
+          <%= submit_tag "Go", name: "", class: "btn btn-outline-success" %>
+        <% end %>
+      </div>
+    </div>
+
+
 </div>
