Have added everything for a booking to show but it seems like bookings are not showing

--- a/app/views/equipment/show.html.erb
+++ b/app/views/equipment/show.html.erb
@@ -17,4 +17,12 @@
     <% end %>
   <%= link_to "Back", equipment_index_path, class: "btn btn-outline-secondary" %>
   </div>
+
+  <div class="my-5">
+    <h4>Bookings</h4>
+    <% @equipment.bookings.each do |booking| %>
+      <p>Booked from <%= booking.start_date %></p>
+    <% end %>
+  </div>
+
 </div>
