--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-xxl">
     <!-- Brand -->
-    <%= link_to "SportRent", root_path, class:"navbar-brand" %>
+    <%= link_to "Equip", root_path, class:"navbar-brand" %>
 
     <!-- Profile Dropdown -->
     <ul class="navbar-nav">
