--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -22,6 +22,22 @@
                   hint: "we need your current password to confirm your changes",
                   required: true,
                   input_html: { autocomplete: "current-password" } %>
+      <%= f.input :first_name,
+                  required: true,
+                  autofocus: true %>
+      <%= f.input :last_name,
+                  required: true,
+                  autofocus: true %>
+      <%= f.input :username,
+                  required: true,
+                  autofocus: true %>
+      <%= f.input :about,
+            required: false,
+            autofocus: true %>
+      <%= f.input :birthday,
+                  required: true,
+                  autofocus: true %>
+    </div>
     </div>
 
     <div class="form-actions my-4">
