--- a/app/views/equipment/show.html.erb
+++ b/app/views/equipment/show.html.erb
@@ -3,6 +3,8 @@
       <p>Sport: <%= @equipment.sport %></p>
       <p>Description: <%= @equipment.description %></p>
       <p>Price: <%= @equipment.price %>€</p>
+      <p>Address: <%= @equipment.address %></p>
+
 
 
   <div class="my-4">
