--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-xxl">
     <!-- Brand -->
-    <%= link_to "Equip", root_path, class:"navbar-brand" %>
+    <%= link_to "Equip", root_path, class: "navbar-brand" %>
 
     <!-- Profile Dropdown -->
     <ul class="navbar-nav">
@@ -11,10 +11,12 @@
             <span class="avatar"><i class="fa-solid fa-circle-user fa-xl"></i></span>
           </a>
           <ul class="dropdown-menu dropdown-menu-end">
-            <li><%= link_to "New offer", new_equipment_path, class: "dropdown-item" %></li>
-            <li><a class="dropdown-item" href="#">My offers</a></li>
+            <li><%= link_to "My Profile", user_path(current_user), class: "dropdown-item" %></li>
+            <li><%= link_to "New Offer", new_equipment_path, class: "dropdown-item" %></li>
+            <li><%= link_to "My Rentable Gear", my_offers_path,  class: "dropdown-item" %></li>
+            <li><%= link_to "My Rented Equipment ", my_rented_equipment_path,  class: "dropdown-item" %></li>
             <li><hr class="dropdown-divider"></li>
-            <li><%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %></li>
+            <li><%= link_to "Log out", destroy_user_session_path, data: { turbo_method: :delete }, class: "dropdown-item" %></li>
           </ul>
         <% else %>
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
