--- a/app/views/shared/_card.html.erb
+++ b/app/views/shared/_card.html.erb
@@ -16,7 +16,7 @@
 
     <!-- Link to equipment details -->
     <div class="d-flex justify-content-between align-items-baseline">
-      <%= link_to "Read More", equipment_path(equipment), class: "btn btn-outline-success card-button mt-2 mb-1 ms-1" %>
+      <%= link_to "View Gear", equipment_path(equipment), class: "btn btn-outline-success card-button mt-2 mb-1 ms-1" %>
 
       <!-- Price -->
       <span class="card-price pe-1">$<%= equipment.price %> / day</span>
