--- a/app/views/shared/_searchbar.html.erb
+++ b/app/views/shared/_searchbar.html.erb
@@ -14,7 +14,7 @@
           <%= text_field_tag :query,
                 params[:query],
                 class: "form-control me-3",
-                placeholder: "Search Equipment!"
+                placeholder: "Search Gear"
             %>
           <%= submit_tag "Go", name: "", class: "btn btn-outline-success" %>
         <% end %>
