--- a/app/views/equipment/show.html.erb
+++ b/app/views/equipment/show.html.erb
@@ -1,30 +1,42 @@
-<div class="container-fluid form my-5">
-    <h2 class="mb-4"><%= @equipment.equipmentname %></h2>
-      <p>Sport: <%= @equipment.sport %></p>
-      <p>Description: <%= @equipment.description %></p>
-      <p>Price: <%= @equipment.price %>€</p>
-      <p>Address: <%= @equipment.address %></p>
+<div class="container-fluid container-show">
+  
+  <%# Equipment Section %>
 
+  <%# Equipment Image %>
+  <div class="row d-flex">
+    <div class="col-md-5 mb-3 pl-0 align-self-center">
+      <img src="http://res.cloudinary.com/dmmduel0o/image/upload/v1/development/ilcql1ekseqursdt6rri376ftlml" class="img-fluid img-show" alt="Equipment Image">
+    </div>
 
+    <%# Equipment Details %>
+    <div class="col-md-7 my-3 align-self-center equipment-details">
+      <h5><%= @equipment.sport %></h5>
+      <h2 class="mb-4"><%= @equipment.equipmentname %></h2>
+      <p><%= @equipment.description %></p>
+      <p><%= @equipment.price %>€ / day</p>
+      <p><%= @equipment.address %></p>
 
-  <div class="my-4">
-    <% if policy(@equipment).edit? %>
-      <%= link_to "Edit", edit_equipment_path(@equipment), class: "btn btn-success" %>
-    <% end %>
-    <% if policy(@equipment).destroy? %>
-      <%= link_to "Delete", equipment_path(@equipment), class: "btn btn-outline-danger", data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
-    <% end %>
-    <% unless @equipment.user == current_user %>
-      <%= link_to "Book", new_equipment_booking_path(@equipment), class: "btn btn-success" %>
-    <% end %>
-  <%= link_to "Back", equipment_index_path, class: "btn btn-outline-secondary" %>
+      <%# Buttons %>
+      <div class="my-4">
+        <% if policy(@equipment).edit? %>
+          <%= link_to "Edit", edit_equipment_path(@equipment), class: "btn btn-success" %>
+        <% end %>
+        <% if policy(@equipment).destroy? %>
+          <%= link_to "Delete", equipment_path(@equipment), class: "btn btn-outline-danger", data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
+        <% end %>
+        <% unless @equipment.user == current_user %>
+          <%= link_to "Book", new_equipment_booking_path(@equipment), class: "btn btn-success" %>
+        <% end %>
+        <%= link_to "Back", equipment_index_path, class: "btn btn-outline-secondary" %>
+      </div>
+    </div>
   </div>
 
+  <%# Bookings Section %>
   <div class="my-5">
-    <h4 class="mb-4">Bookings</h4>
+    <h3 class="mb-4"><%= pluralize( @equipment.bookings.size, 'Booking' ) %></h3>
     <% @equipment.bookings.each do |booking| %>
       <p>Booked from <%= booking.start_date %> to <%= booking.end_date %> by <%= booking.user.email %></p>
     <% end %>
   </div>
-
 </div>
