--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -1,3 +1,8 @@
+.location-price {
+  list-style: none;
+  padding-left: 0;
+}
+
 @media (min-width: 768px) {
   .container-show {
     margin: 40px 0 0 0;
