Map infobox links to equipment and address is searchable

--- a/app/views/equipment/_info_window.html.erb
+++ b/app/views/equipment/_info_window.html.erb
@@ -1,2 +1,2 @@
-<h2><%= equipment.equipmentname %></h2>
+<h2><%= link_to(equipment.equipmentname, equipment_path(equipment)) %></h2>
 <p><%= equipment.address %></p>
