adjustments to show html and css

--- a/app/views/equipment/show.html.erb
+++ b/app/views/equipment/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container-fluid container-show">
-  
+
   <%# Equipment Section %>
 
   <%# Equipment Image %>
@@ -34,7 +34,7 @@
 
   <%# Bookings Section %>
   <div class="my-5">
-    <h3 class="mb-4"><%= pluralize( @equipment.bookings.size, 'Booking' ) %></h3>
+    <h3 class="mb-4 booking-title"><%= pluralize( @equipment.bookings.size, 'Booking' ) %></h3>
     <% @equipment.bookings.each do |booking| %>
       <p>Booked from <%= booking.start_date %> to <%= booking.end_date %> by <%= booking.user.email %></p>
     <% end %>
