--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -1,3 +1,17 @@
+.booking-card {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  border: 1px rgb(87, 212, 129) solid;
+}
+
 .booking-title {
-  background-color: green;
+  height: 30%;
+  background: rgb(0, 255, 145);
+  color: white;
+  text-align: center;
+}
+
+.container {
+  padding: 2px 16px;
 }
