Fixed bug when uploading photo for new product

--- a/app/views/equipment/_info_window.html.erb
+++ b/app/views/equipment/_info_window.html.erb
@@ -1,6 +1,8 @@
 <%# Photo %>
 <%= link_to equipment_path(equipment) do %>
-  <%= cl_image_tag(equipment.photo.key, class: "img-fluid img-show", alt: "Equipment Image", style: "width: 100%; height: auto; margin-bottom: 10px") %>
+  <% if equipment.photo.present? %>
+    <%= cl_image_tag(equipment.photo.key, class: "img-fluid img-show", alt: "Equipment Image", style: "width: 100%; height: auto; margin-bottom: 10px") %>
+  <% end %>
 <% end %>
 
 <%# Sports Category %>
