--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container form  my-5">
+<div class="container form my-5">
   <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
@@ -28,26 +28,13 @@
       <%= f.input :last_name,
                   required: true,
                   autofocus: true %>
-      <%= f.input :username,
-                  required: true,
-                  autofocus: true %>
       <%= f.input :about,
-            required: false,
-            autofocus: true %>
-      <%= f.input :birthday,
-                  required: true,
+                  required: false,
                   autofocus: true %>
-    </div>
     </div>
 
-    <div class="form-actions my-4">
+    <div class="form-actions d-flex justify-content-between align-items-center my-4">
       <%= f.button :submit, "Update", class: "btn btn-success" %>
+      <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete, class: "btn btn-secondary" %>
     </div>
   <% end %>
-
-  <h3>Cancel my account</h3>
-
-  <div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
-
-  <%= link_to "Back", :back %>
-</div>
