--- a/app/views/equipment/index.html.erb
+++ b/app/views/equipment/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container my-5">
   <!-- Title and description -->
   <div class="text-center">
-    <h1>Equip</h1>
+    <h1>Equip!</h1>
     <p>Your sports equipment rental platform.</p>
   </div>
 
