--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -1,17 +1,19 @@
 .booking-card {
-  width: 30%;
+  width: 40.5%;
   display: flex;
   flex-direction: column;
-  border: 1px rgb(87, 212, 129) solid;
+  border: 1px #1EDD88 solid;
+  background-image: linear-gradient(to right, #1EDD88, #96c93d);
+  border-radius: 5px;
 }
 
 .booking-title {
   height: 30%;
-  background: rgb(0, 255, 145);
   color: white;
   text-align: center;
 }
 
 .container {
-  padding: 2px 16px;
+  padding: 3px 16px;
+  color: #f0f0f0;
 }
