--- a/app/views/equipment/show.html.erb
+++ b/app/views/equipment/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid container-show">
+<div class="container-fluid container-show" style="background-image: url('./assets/images/showbackground.jpg');">
 
   <%# Equipment Section %>
 
