--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -134,3 +134,35 @@
 .equipment-img {
   border: 5px solid #434d48;
 }
+
+.equipment-box {
+  background-color: rgba(255, 255, 255, 0.9);
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.btn-group {
+  display: flex;
+  gap: 10px;
+}
+
+.btn {
+  background-color: #2c3e50;;
+  border: 1px #2c3e50;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  width: 100px;
+}
+
+.btn:hover {
+  background-color: #3498db;
+  border: #3498db;
+}
+
+.booking-card + .booking-card {
+  margin-top: 10px; /* Adjust this value to control the gap */
+}
